--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 <body>
   <div class="main">
+    <div class="score">
+      <span id="player-one-score">2</span> : <span id="player-two-score">2</span>
+    </div>
+
+    
+    <div class="player">
+      <div id="player-one-name" class="player-name">Name 1</div>
+      <div id="player-one-name-popup" class="player-popup">
+        <form id="player-one-form">
+          <input type="text" name="player-one-name-field" id="player-one-name-field" size="10">
+          <input type="submit" value="Save">
+        </form>
+      </div>
+      <div class="mark">X</div>
+    </div>
+
     <div class="inner-main">
       <div class="tile"></div>
       <div class="tile"></div>
@@ -21,6 +37,18 @@
       <div class="tile"></div>
       <div class="tile"></div>
     </div>
+
+    <div class="player">
+      <div id="player-two-name" class="player-name">Name 2</div>
+      <div id="player-two-name-popup" class="player-popup">
+        <form id="player-two-form">
+          <input type="text" name="player-two-name-field" id="player-two-name-field" size="10">
+          <input type="submit" value="Save">
+        </form>
+      </div>
+      <div class="mark">O</div>
+    </div>
+  
   </div>
 </body>
 </html>
